--- a/chl_becker/templates/pageBeckertv/page-beckertv.html.twig
+++ b/chl_becker/templates/pageBeckertv/page-beckertv.html.twig
@@ -97,7 +97,7 @@
   </header>
   
   <div class="component-top-ten-posters--wrapper-posts">
-      <div class="component-top-ten-posters--post">
+      <div class="component-post--card">
 
         <div class="post-media flex justify-center items-center">
           <picture class="post-picture">
