--- a/chl_becker/front-src/css/pages/_p-voting.scss
+++ b/chl_becker/front-src/css/pages/_p-voting.scss
@@ -49,6 +49,7 @@
         width: 100%;
         margin: 0px auto;
         .component-counter--title {
+            line-height: 1.1;
             color: var(--color-white);
             font: {
                 family: var(--font-family-primary);
