--- a/chl_becker/front-src/css/components/_index.scss
+++ b/chl_becker/front-src/css/components/_index.scss
@@ -1,7 +1,7 @@
 //
 // Component root
 //
-
+@import 'c-lateral-profile';
 @import 'c-agegate';
 @import 'c-header';
 @import 'c-icomoon';
@@ -11,3 +11,4 @@
 @import 'c-modal';
 @import 'c-sprite';
 @import 'c-loader';
+@import 'c-modal-gamerules';
