--- a/chl_becker/front-src/css/pages/_index.scss
+++ b/chl_becker/front-src/css/pages/_index.scss
@@ -1,6 +1,10 @@
 //
 // Pages root
 //
+@import 'p-detail-challenger';
+@import 'p-all-challenges';
+@import 'p-competition-home';
+@import 'p-thanks_register-challenger';
 @import 'p-user_zone';
 @import 'p-voting';
 @import 'p-beckertv';
