--- a/chl_becker/templates/pageBeckertv/page-beckertv.html.twig
+++ b/chl_becker/templates/pageBeckertv/page-beckertv.html.twig
@@ -1,3 +1,155 @@
-<div>
-  {% include '@chl_becker/pageChallengerDetail/page-pageChallengerDetail.html.twig' %}
+{# COMPONENTE BANNER PRINCIPAL #}
+<section class="component-banner-productos">
+  {% for item in banner_principal %}
+    <div class="flex lg:pt-16 mb-32">
+      <div class="flex flex-1 items-center">
+        <div class="content__banner_tv absolute lg:pl-52 lg:w-7/12 md:pl-14 md:w-7/12 pl-9 text-white w-9/12 xl:w-3/6">
+          <span data-aos-duration="1000" data-aos="fade-right" class="uppercase lg:text-base text-xs">{{item.subtitle}}</span>
+          <h2 data-aos-duration="1000" data-aos="fade-left" class="leading-none lg:text-7xl text-5xl">{{item.title}}</h2>
+          <p data-aos-duration="1000" data-aos="fade-right" class="py-3 text-sm">{{item.text}}</p>
+      </div>
+      </div>
+      <div class="lg:w-2/3 w-7/12">
+        <img class="w-full bg-banner-beckertv lg:block hidden" src="{{item.image_desktop}}" alt="{{item.image_desktop_alt}}">
+        <img class="bg-banner-beckertv block lg:hidden object-center object-cover w-full" src="{{item.image_mobile}}" alt="{{item.image_mobile_alt}}">
+     </div>
+
+    </div>
+      <img data-aos-duration="1000" data-aos="fade-up-left" class="lg:block hidden -bottom-0 absolute lg:right-20 right-4 beckertv_img z-20" src="{{item.image_beer_desktop}}" alt="{{image_beer_desktop_alt}}">
+      <img data-aos-duration="1000" data-aos="fade-up-left" class="absolute bottom-4 md:w-1/6 right-6 w-1/4 beckertv_img-sm lg:hidden block" src="{{item.image_beer_mobile}}" alt="{{image_beer_mobile_alt}}">
+  {% endfor %}
+</section>
+{# FIN #}
+
+{# COMPONENTE STREAMING EN VIVO #}
+{% for item in streaming %}
+  {% if item.display == true %}
+    <section class="component-streaming mt-52 bg-white py-12 lg:px-10">
+        <h2 data-aos-duration="1000" data-aos="fade-up-right" class="lg:-top-28 -top-24 leading-none relative lg:text-6xl text-5xl text-white container ml-8 lg:mx-auto">streaming<span class="block color-secondary"> en vivo </span></h2>
+        {# LIVE STREAMING #}
+        <div class="-mt-20 lg:flex container mx-auto">
+              <div class="lg:w-8/12"> 
+                <iframe src="{{ item.video_url }}" width="100%" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+              </div>
+              {# LIVE CHAT #}
+              <div class="lg:w-4/12">
+                <iframe src="{{ item.liveChat_url }}" width="100%" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+              </div>
+        </div>      
+    </section>
+  {% endif %}
+{% endfor %}
+{# FIN #}
+
+
+{# COMPONENTE BANNER LINK #}
+<section class="component-banner-link bg-fifth">
+  {% for item in banner_link %}
+    <div class="flex items-center relative">
+      <img data-aos-duration="1000" data-aos="fade-up" class="bg-banner-link w-full lg:block hidden object-cover object-center" src="{{item.image_background_desktop}}" alt="{{image_background_desktop_alt}}">
+      <img data-aos-duration="1000" data-aos="fade-up" class="w-full lg:hidden block" src="{{item.image_background_mobile}}" alt="{{image_background_mobile_alt}}">
+      <div class="box-banner-link absolute bg-fourth lg:left-28 lg:ml-0 lg:w-1/3 xl:w-1/3 mx-4 p-4 text-white">
+        <h2 data-aos-duration="1000" data-aos="fade-up-right" class="-top-14 absolute leading-none text-6xl">{{item.title}}</h2>
+        <p data-aos-duration="1000" data-aos="fade-up-right" class="lg:pb-8 pb-3 pt-16 text-xs">{{item.text}}</p>
+        <div data-aos-duration="1000" data-aos="fade-up" class="relative -top-3 flex items-baseline justify-end">
+           <a class="mr-2 text-xs" href="{{item.url_link}}" class="">{{item.name_link}}</a>
+            <span><svg width="83" height="83" viewBox="0 0 83 83" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_d)">
+              <path d="M19 0V7.5H66.2125L4 69.7125L9.2875 75L71.5 12.7875V60H79V0H19Z" fill="white"/>
+              </g>
+              <defs>
+              <filter id="filter0_d" x="0" y="0" width="83" height="83" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+              <feOffset dy="4"/>
+              <feGaussianBlur stdDeviation="2"/>
+              <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+              <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+              </filter>
+              </defs>
+              </svg></span>
+        </div>
+      </div>
+
+      <img data-aos-duration="1000" data-aos="fade-up" class="-bottom-12 absolute lg:right-28 right-4 lg:block hidden banner-link-img w-2/12" src="{{item.image_beer_desktop}}" alt="{{image_beer_desktop_alt}}">
+      <img data-aos-duration="1000" data-aos="fade-up" class="-bottom-10 absolute block lg:hidden md:w-1/6 right-6 w-1/3 z-20 " src="{{item.image_beer_mobile}}" alt="{{image_beer_mobile_alt}}">
+    </div>
+  {% endfor %}
+</section>
+{# FIN #}
+
+
+{# COMPONENTE VIDEO HOME #}
+ <section class="component-video relative">
+  {% for item in video %}
+    <div class="flex items-center play-video" id="btn-hero-video" data-video-src="{{item.video}}">
+      <h3 data-aos="fade-right" class="absolute leading-none lg:ml-16 ml-8 text-5xl text-white w-1/4">{{item.title}}</h3>
+      <p>{{item.description | raw}}</p>
+     <img src="{{item.image}}"  alt="{{item.image_alt}}" class="object-cover object-top w-full lg:block hidden">
+     <img src="{{item.image_mobile}}"  alt="{{item.image_mobile_alt}}" class="object-cover object-top w-full lg:hidden">
+     <svg class="absolute left-0 m-auto right-0" width="83" height="83" viewBox="0 0 83 83" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="41.5" cy="41.5" r="41.5" fill="white"/>
+        <path d="M52.0215 41.5001L36.2398 50.6117L36.2398 32.3886L52.0215 41.5001Z" fill="black"/>
+        </svg>
+    </div>
+    <div id="hero-video" class="absolute top-0 w-full" >
+
+    </div>
+  {% endfor %}
+</section>
+{# FIN #}
+
+{# COMPONENTE VIDEO #}
+<section class="bg-fifth component-slider-video pt-20">
+  <h2 class=" lg:mx-auto pl-8 lg:text-3xl my-8 color-primary text-xl lg:w-full w-1/2 leading-none" data-aos="fade-right">Nuestros Contenidos</h2>
+  <div class="slider_banner_tv lg:pl-8 lg:mx-auto" data-aos-duration="2000" data-aos="fade-up-right">
+      {% for item in slider_video %}
+        <div class="slide">
+          <div class="content-slider-video lg:w-11/12 w-10/12 mx-auto lg:mx-0">
+            <iframe src={{item.video}}></iframe>
+            <div class="flex items-baseline justify-between pt-4">
+              <h2 class="-top-2.5 color-primary leading-none relative text-sm uppercase">{{item.title_video}}</h2>
+                <button class="play-video-tv btn-modal relative z-20 duration-150 ease-linear focus:outline-none  outline-none" data-video-src="{{item.video}}" type="button">
+                  <svg width="24" height="33" viewBox="0 0 24 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                   <path d="M3.46374 0V3.42488H18.1243L0 20.5855L2.42954 23L20.5538 5.83942V20.4095H24V0H3.46374Z" fill="#3A3B82"/>
+                  </svg>
+                </button>
+              
+            </div>
+         </div>
+        </div>
+      {% endfor %}
+  </div>
+</section>
+{# FIN #}
+
+
+{# COMPONENTE FORMULARIO #}
+<section class="component-form-register lg:px-0">
+  <div class="bg-secondary container lg:pb-16 lg:pt-24 lg:px-16 mx-auto pb-28 pt-24 px-6">
+  {{ drupal_entity('webform', 'form_register') }}
+ </div>
+</section>
+{# FIN #}
+
+<div id="modal-id-tv" class="hidden overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center" >
+  <div class="relative w-full my-6 mx-auto max-w-3xl">
+    <!--content-->
+    <div class="relative flex flex-col w-full outline-none focus:outline-none">
+      <!--header-->
+      <div class="flex items-start justify-between">
+        <button class="close-modal bg-secondary border-0 float-right focus:outline-none font-semibold leading-none ml-auto outline-none rounded-full text-white">
+          <span class="block flex focus:outline-none h-8 items-center justify-center outline-none w-8">
+            ×
+          </span>
+        </button>
+      </div>
+      <!--body-->
+      <div class="relative px-6 flex-auto">
+        <iframe width="100%" height="600" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
+<div class="close-modal hidden opacity-75 fixed inset-0 z-40 bg-black" id="modal-id-tv-backdrop"></div>
